API docs - Fixed margin on mobile
[skip ci]

--- a/docfx/docfx_project/templates/artemis/styles/artemis.css
+++ b/docfx/docfx_project/templates/artemis/styles/artemis.css
@@ -10,6 +10,11 @@
 	margin-left: 340px;
 }
 
+@media only screen and (max-width: 768px)
+.article.grid-right {
+    margin-left: 0;
+}
+
 @media (min-width: 1500px) {
 .container {
     width: 1470px;
